Add student table and borrow function to the web app, Also update the openapi swagger doc. #10
