# models/book.py
@@ -1,4 +1,6 @@
 from db import db
+from sqlalchemy.dialects.postgresql import UUID
+import uuid
 
 class BooksModel(db.Model):
     __tablename__ = 'book'
@@ -9,6 +11,8 @@ class BooksModel(db.Model):
     author = db.Column(db.String(), nullable=False)
     year_published = db.Column(db.Integer(), nullable=True)
     genre = db.Column(db.String(), nullable=True)
+    student_id = db.Column(UUID(as_uuid=True), db.ForeignKey("student.student_id"),default=None, unique=False,nullable=True)
+    student = db.relationship("StudentsModel", back_populates="book")
     
 
     def __init__(self, isbn, title, author,year_published,genre):
