# resources/book.py
@@ -8,7 +8,7 @@ from models.book import BooksModel , db
 
 
 
-book_B= Blueprint("user", __name__ ,description="book Operations")
+book_B= Blueprint("book", __name__ ,description="book Operations")
 
 # POST method : Add new book
 # GET  method : Return all books in the table
@@ -41,7 +41,7 @@ class BOOK(MethodView):
                 db.session.add(new_book)    ### should check the the content to make sure keys and values are valid.
                 db.session.commit()
             except SQLAlchemyError:
-                return abort(make_response({'message':f'An Error Occured While Inserting The Book '},500))
+                return abort(make_response({'message':f'An Error Occured While Inserting The Book {traceback.print_exc()} '},500))
 
             return make_response({"message": f"book {new_book.title} has been added successfully."},201)
         else:
@@ -75,8 +75,8 @@ class BOOK_ID(MethodView):
             db.session.commit()
         except SQLAlchemyError:
                 return abort(make_response({'message':'An Error Occured While Updating The Book'},500))
-        
         return make_response({"message": f"Book {book.title} successfully updated"},200)
+    
     def delete(self,book_id):
         book = BooksModel.query.get_or_404(book_id)
         try:
@@ -86,4 +86,37 @@ class BOOK_ID(MethodView):
                 return abort(make_response({'message':'An Error Occured While Deleting The Book'},500))
         
         return {"message": f"Book {book.title} successfully deleted."}
-    
+
+@book_B.route('/books/borrow')
+class BOOK_BORROW(MethodView):
+    def get(self):
+        books = BooksModel.query.all()
+        borrowers=[]
+        for x in books:
+                if(x.student_id != None):
+                    borrowers.append(x)
+        results = [
+            {   
+                "isbn": borrower.isbn,
+                "title": borrower.title,
+                "author": borrower.author,
+                "year_published": borrower.year_published,
+                "genre": borrower.genre,
+                "Student Name": borrower.student.name
+            } for borrower in borrowers ]
+        return {"count": len(results), "borrowers": results, "message": "success"}
+
+@book_B.route('/books/borrow/<book_id>')
+class BOOK_BORROW_ADD(MethodView):    
+    def put(self,book_id):
+        book = BooksModel.query.get_or_404(book_id)
+        data = request.get_json()
+        book.student_id = data['student_id']
+        try:
+            db.session.add(book)
+            db.session.commit()
+        except SQLAlchemyError:
+                return abort(make_response({'message':'An Error Occured While Updating Borrowed Status'},500))
+        return make_response({"message": f"Book {book.title} borrow status has been updated"},200)
+
+          
